--- a/src/GrandPrix.UniversalWindows/MainPage.xaml
+++ b/src/GrandPrix.UniversalWindows/MainPage.xaml
@@ -1,13 +1,16 @@
 ﻿<Page
-    x:Class="GrandPrix.UniversalWindows.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:GrandPrix.UniversalWindows"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:WindowsUniversal="using:Hike.Framework.WindowsUniversal"
+    x:Class="GrandPrix.UniversalWindows.MainPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+
+        <WindowsUniversal:HKGame HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
