--- a/src/GrandPrix.UniversalWindows/MainPage.xaml
+++ b/src/GrandPrix.UniversalWindows/MainPage.xaml
@@ -6,23 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:WindowsUniversal="using:Hike.Framework.WindowsUniversal"
     x:Class="GrandPrix.UniversalWindows.MainPage"
-    mc:Ignorable="d"
-    Width="Auto"
-    Height="Auto"
-    VerticalAlignment="Stretch" 
-    HorizontalAlignment="Stretch" 
-    HorizontalContentAlignment="Stretch"
-    VerticalContentAlignment="Stretch">
+    mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Width="Auto" Height="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-
-        <WindowsUniversal:HKGame  Width="Auto" Height="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
-
-    </Grid>
+    <SwapChainPanel x:Name="swapChainPanel" />
+    
 </Page>
